fixes min-height issue with carousel image spilling over container on mobile

--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -140,10 +140,10 @@ button {
 
                     .space-detail-body-inner { background: #fff; border: solid 1px @grey_border; padding: 5px;
 
-                        .image-container, .map-container { max-height: 303px !important; }
+                        .image-container, .map-container { }
 
                         .image-container {
-                            .carousel { background: #f8f8f8 url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 20px;  margin: 0; }
+                            .carousel { background: #f8f8f8 url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 20px;  margin: 0; min-height: 190px; }
                         }
 
                         .map-container { background: #f8f8f8 url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 20px; }
